make it bigger on smaller sized screens and fix on normal

--- a/style.css
+++ b/style.css
@@ -202,7 +202,6 @@ source {
 
 #rightmenu {
     width: 100%;
-    height: 0;
     position: fixed;
     top: 0;
     left: 0;
@@ -267,7 +266,7 @@ source {
     width: 100%;
     height: 100%;
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: hidden;
 }
 
 #rightmenu .menu .content .front h1 {
@@ -310,9 +309,9 @@ source {
 #rightmenu .menu .content .bot {
     width: 100%;
     padding: 10px 0 11px 100px;
-    position: fixed;
+    position: absolute;
     background-color: #101010;
-    bottom: 50%;
+    bottom: 60px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -1644,7 +1643,7 @@ footer .bot p a {
     }
     
     #rightmenu.viz .menu {
-        height: 60%;
+        height: 70%;
         transition: height 0.6s ease-in-out 0.4s;
         overflow: hidden;
     }
@@ -1711,7 +1710,7 @@ footer .bot p a {
     }
     
     #rightmenu.viz .menu {
-        height: 60%;
+        height: 70%;
     }
     
     #rightmenu .menu .shadow {
